--- a/views/lpe/contenido/moderar.js.twig
+++ b/views/lpe/contenido/moderar.js.twig
@@ -3,6 +3,7 @@
 	var imgURL = "{{ urlFor('shwImgUsuario',{'res':32})}}"
 	var sancionar = function(idUsuario){
 		completarModalSancion(idUsuario);
+		$('.modal').modal('hide')
         $('#moderarModal').modal('show')
 	}
 
@@ -33,4 +34,9 @@
 		$('#dias-susp').val("0");
 		$( "#form-susp" ).submit();
 	});
+
+	 var eliminarComentario = function(id) {
+        $('#eliminarComentario').find('input[name="id"]').val(id)
+        $('#eliminarComentario').submit();
+    }
 </script>
