--- a/views/lpe/contenido/moderar.twig
+++ b/views/lpe/contenido/moderar.twig
@@ -7,38 +7,12 @@
             </div>
             <div class="modal-body">
                 <h6><img src="" class="img-circle sancionando-img" style="margin-right:10px;" alt=""><span class="sancionando-nombre"></span> <span class="sancionando-apellido"></span></h6>
-                <!-- Nav tabs -->
-                <ul class="nav nav-tabs" role="tablist">
-                    <li role="presentation" class="active"><a href="#Suspensión" aria-controls="home" role="tab" data-toggle="tab">Suspensión</a></li>
-                    <li role="presentation"><a href="#Advertencia" aria-controls="profile" role="tab" data-toggle="tab">Advertencia</a></li>
-                    <li role="presentation"><a href="#Puntos" aria-controls="messages" role="tab" data-toggle="tab">Puntos</a></li>
-                </ul>
-                <br>
+                <hr>
                 <!-- Tab panes -->
                 <div class="tab-content">
                     <div role="tabpanel" class="tab-pane active" id="Suspensión">
-                        <div class="well">
-                            <form id="form-susp" action="" class="form-sancion" method="POST" data-abide>
-                                <input hidden name="tipo" value="Suspension">
-                                <div class="form-group">
-                                    <label class="control-label" for="focusedInput">Dias a suspender</label>
-                                    <input id="dias-susp" name="cantidad" class="form-control" id="focusedInput" type="number" value="1">
-                                </div>
-                                <br>
-                                <div class="form-group">
-                                    <label for="textArea" class=" control-label">Razon de la suspension</label>
-                                    <textarea name="mensaje" class="form-control" rows="1" id="textArea" placeholder="Relate brevemente la razón de la suspención" required></textarea>
-                                </div>
-                                <div class="form-group text-right">
-                                    <a href="#" class="btn btn-danger btn-sm">Suspender</a>
-                                </div>
-                            </form>
-                        </div>
-                        <hr>
                         <a href="javascript:void(0)" class="btn btn-danger btn-block btn-sm" data-toggle="modal" data-target="#moderarModalConfirmar">Suspender usuario indefinidamente</a>
                     </div>
-                    <div role="tabpanel" class="tab-pane" id="Advertencia">Error: No habilitado para esta versión de Virtuagora</div>
-                    <div role="tabpanel" class="tab-pane" id="Puntos">Error: No habilitado para esta versión de Virtuagora</div>
                 </div>
             </div>
             <div class="modal-footer">
@@ -69,3 +43,6 @@
         </div>
     </div>
 </div>
+ <form id="eliminarComentario" action="{{ urlFor('runElimiComenta') }}" method="POST">
+    <input type="hidden" type="text" name="id">
+</form>
